[gd_scene load_steps=3 format=3 uid="uid://wgpmj4y3ljen"]

[ext_resource type="Script" uid="uid://c28gcqhofyhsk" path="res://pause_menu.gd" id="1_pause"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 32

[node name="PauseMenu" type="Control"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_pause")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
theme_override_constants/separation = 20

[node name="PauseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Main Menu"
